@@ -13,6 +13,10 @@ export(
       getSummary,
       getSummary.glm,
       getSummary.lm,
+      getSummary.polr,
+      getSummary.simex,
+      getSummary.lmer,
+      getSummary.expcoef.glm,
       applyTemplate,
       #get.substr,
       getSummaryTemplate,
